Name: HSH
Version: 1.2.4
License: LGPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Stability: Beta
Copyright: Copyright (c) 2006-2007 John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING
homepage: http://software.complete.org/hsh
Synopsis: Library to mix shell scripting with Haskell programs
Description: HSH is designed to let you mix and match shell expressions with
 Haskell programs. With HSH, it is possible to easily run shell
 commands, capture their output or provide their input, and pipe them
 to and from other shell commands and arbitrary Haskell functions at will.
Exposed-Modules: HSH, HSH.Command, HSH.ShellEquivs
Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances
Build-Depends: base, unix, mtl, regex-compat, MissingH>=0.18.3, hslogger, filepath, regex-base, regex-posix
GHC-Options: -O2
Category: System

Executable: runtests
Buildable: False 
Main-Is: runtests.hs
HS-Source-Dir: testsrc
Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances
